[package]
name = "pilot"
version = "0.1.0"
edition = "2021"

[dependencies]
global-hotkey = "0.6.2"
winit = "0.30.5"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.1.3"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
core-graphics = "0.24.0"

[package.metadata.bundle]
name = "Pilot"
identifier = "com.rishabh.pilot"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Well, do whatever you want with this."
category = "Developer Tool"
short_description = "An application that captures global hotkeys."
long_description = """
A longer description of your application and its features.
"""

[package.metadata.bundle.macos]
minimum_system_version = "10.13"
